@@ -1,5 +1,8 @@
 [b]Version 0.6.11[/b]:
 
+(2012-01-24)
+ * Move the open dvd, vcd and audio cd to a submenu.
+
 (2012-01-23)
  * New option for command-line: -disable-server. This option disables the 
    server used to communicate with other instances. This, of course, disables 
